# any-setup

./: Cargo.toml
.devcontainer/: devcontainer.json
assets/: app-description.markup  app.desktop
assets/desktop/: org.pvermeer.AnySetup.desktop
dev-assets/share/pages/: 00-home.yml  test-page-1.yml
workspaces/app/: Cargo.toml  build.rs
workspaces/app/credits/: documentation.yml  translations.yml
workspaces/app/src/: application.rs
workspaces/app/src/application/: pages.rs
workspaces/app/src/application/pages/: content.rs  fallback.rs  home.rs  page_config.rs
workspaces/app/src/application/window/: view.rs
workspaces/app/src/application/window/view/: about.rs  app_menu.rs  sidebar_page.rs
workspaces/app/translations/: en.yml
workspaces/common/: Cargo.toml
workspaces/common/src/: app_dirs.rs  assets.rs  cache_settings.rs  desktop_assets.rs  lib.rs
