[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "any-setup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
gtk = { workspace = true }
libadwaita = { workspace = true }
rust-i18n = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
common = { workspace = true }
