[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
gtk = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[lib]
test = false
doctest = false
